added new files and updated martins project file

--- a/notebooks/03-graph-place-queries.ipynb
+++ b/notebooks/03-graph-place-queries.ipynb
@@ -337,9 +337,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python (ox)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ox"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -351,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
