--- a/notebooks/17-street-network-orientations.ipynb
+++ b/notebooks/17-street-network-orientations.ipynb
@@ -133,9 +133,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ox)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ox"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
